--- a/works/moth/index.html
+++ b/works/moth/index.html
@@ -5,25 +5,26 @@
 <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Bebas+Neue&family=Alfa+Slab+One&family=Audiowide&family=Bai+Jamjuree:wght@600;700&family=Barlow&family=Big+Shoulders+Display&family=Chivo:ital,wght@0,100..900;1,100..900&family=Climate+Crisis&family=Electrolize&family=Jersey+10&family=Lilita+One&family=Luckiest+Guy&family=Matemasie&family=Michroma&family=Paytone+One&family=Playwrite+AT:ital,wght@0,100..400;1,100..400&family=Rajdhani:wght@300&family=Saira+Semi+Condensed&family=Titillium+Web:wght@300&family=Unbounded:wght@200..900&display=swap" rel="stylesheet">
 <style>.loader-cont{align-items:center;background-color:#bc71ff;display:flex;height:100vh;justify-content:center;position:fixed;width:100vw;z-index:1000000}.loader{align-items:flex-start;aspect-ratio:1;display:flex;width:60px}.loader:after,.loader:before{aspect-ratio:1;content:"";flex:1;--g:conic-gradient(from -90deg at 10px 10px,#fff 90deg,#0000 0);animation:l20 1s infinite;background:var(--g),var(--g),var(--g);filter:drop-shadow(30px 30px 0 #fff)}.loader:after{transform:scaleX(-1)}@keyframes l20{0%{background-position:0 0,10px 10px,20px 20px}33%{background-position:10px 10px}66%{background-position:0 20px,10px 10px,20px 0}to{background-position:0 0,10px 10px,20px 20px}}.loader_bg{align-items:center;animation:noiseAnimation 3s ease-in-out infinite;background:radial-gradient(circle at 10% 20%,hsla(0,100%,70%,.8),transparent 50%),radial-gradient(circle at 80% 30%,rgba(102,102,255,.8),transparent 50%),radial-gradient(circle at 50% 80%,rgba(102,255,102,.8),transparent 50%);background-size:200% 200%;display:flex;height:100%;justify-content:center;opacity:.5;width:100%}@keyframes noiseAnimation{0%{background-position:0 0}50%{background-position:100% 100%}to{background-position:0 0}}</style>
 <link rel="stylesheet" href="/_nuxt/Topbar.CkE6sM6w.css">
-<link rel="stylesheet" href="/_nuxt/interval.D2cs51dV.css">
+<link rel="stylesheet" href="/_nuxt/ChangeLanguage.D2cs51dV.css">
 <link rel="stylesheet" href="/_nuxt/Contact.CQKS7Qcw.css">
-<link rel="preload" as="fetch" crossorigin="anonymous" href="/works/moth/_payload.json?b134aa6d-6e95-4a6e-8cef-62072305ebb8">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DLAX38Nm.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BOAAsr3I.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/q58rgZWk.js">
+<link rel="preload" as="fetch" crossorigin="anonymous" href="/works/moth/_payload.json?f49dd409-52c0-4d7b-b49e-a486357f3c3d">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BoAHFf95.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CR3BNz8i.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BHLLAhTb.js">
 <link rel="modulepreload" as="script" crossorigin href="/_nuxt/Cdr9tgl2.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BViwnLW0.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/B9vPt6wT.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/COmRQaX9.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/5Z9kNXPK.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/Cggqdnqc.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/CiB3DNVr.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/D2vNuijP.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/DSM3gs8R.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/yNDI0E1g.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/R2dVsE5b.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/Bv1jPpf1.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/2opkHf6e.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/Du-0NPCM.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BcclND8z.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/j-6Dqvr5.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/sk2EYFc4.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/DjQePr8h.js">
 <link rel="icon" type="image/x-icon" href="favicon.ico">
-<script type="module" src="/_nuxt/DLAX38Nm.js" crossorigin></script>
-<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body  class="light"><div id="__nuxt"><!--[--><main><div class="loader-cont" id="loader-cont"><div class="loader_bg"><div class="loader"></div></div></div><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/works/moth/_payload.json?b134aa6d-6e95-4a6e-8cef-62072305ebb8">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/works/moth",1736132876728]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"b134aa6d-6e95-4a6e-8cef-62072305ebb8",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
+<script type="module" src="/_nuxt/BoAHFf95.js" crossorigin></script>
+<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body  class="light"><div id="__nuxt"><!--[--><main><div class="loader-cont" id="loader-cont"><div class="loader_bg"><div class="loader"></div></div></div><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/works/moth/_payload.json?f49dd409-52c0-4d7b-b49e-a486357f3c3d">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/works/moth",1736133314728]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"f49dd409-52c0-4d7b-b49e-a486357f3c3d",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
 <script src="https://player.vimeo.com/api/player.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/4.1.4/imagesloaded.pkgd.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.4/TweenMax.min.js"></script></body></html>
