--- a/about/index.html
+++ b/about/index.html
@@ -7,21 +7,21 @@
 <style>.imgabout{margin:auto;width:100%}p{line-height:1}</style>
 <link rel="stylesheet" href="/_nuxt/Topbar.CkE6sM6w.css">
 <link rel="stylesheet" href="/_nuxt/interval.D2cs51dV.css">
-<link rel="preload" as="fetch" crossorigin="anonymous" href="/about/_payload.json?acb65884-3508-409b-a5c9-e9b6b61c325b">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DeJUvkL0.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BEkskKB7.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/KewPe7iF.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/6Cv_2f0H.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/B9UaOuIL.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/qiJCzz6Q.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DX-3dphw.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/DWGUGepl.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/Dc4tC4NM.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/gvo-xKbc.js">
+<link rel="preload" as="fetch" crossorigin="anonymous" href="/about/_payload.json?7c03756c-4a14-4059-8520-dbeda97fd6fe">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/B2-BoNt7.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/Gyf06sm0.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DyzpkNUw.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/WVBAIvCk.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DowJIJMp.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DUq0i4RN.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/i67v9_Ug.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/-rKweCFV.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/D04FmQNC.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/B6pJlALM.js">
 <link rel="icon" type="image/x-icon" href="favicon.ico">
-<script type="module" src="/_nuxt/DeJUvkL0.js" crossorigin></script>
-<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body  class="light"><div id="__nuxt"><!--[--><main><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/about/_payload.json?acb65884-3508-409b-a5c9-e9b6b61c325b">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/about",1736133761313]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"acb65884-3508-409b-a5c9-e9b6b61c325b",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
+<script type="module" src="/_nuxt/B2-BoNt7.js" crossorigin></script>
+<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body  class="light"><div id="__nuxt"><!--[--><main><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/about/_payload.json?7c03756c-4a14-4059-8520-dbeda97fd6fe">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/about",1736133899440]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"7c03756c-4a14-4059-8520-dbeda97fd6fe",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
 <script src="https://player.vimeo.com/api/player.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/4.1.4/imagesloaded.pkgd.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.4/TweenMax.min.js"></script></body></html>
