--- a/ru/works/fontain/index.html
+++ b/ru/works/fontain/index.html
@@ -7,22 +7,22 @@
 <link rel="stylesheet" href="/_nuxt/Topbar_ru.IWjWQhaI.css">
 <link rel="stylesheet" href="/_nuxt/interval.D2cs51dV.css">
 <link rel="stylesheet" href="/_nuxt/Gallery.4g4am-Jz.css">
-<link rel="preload" as="fetch" crossorigin="anonymous" href="/ru/works/fontain/_payload.json?acb65884-3508-409b-a5c9-e9b6b61c325b">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DeJUvkL0.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CxnXQg1D.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/KewPe7iF.js">
+<link rel="preload" as="fetch" crossorigin="anonymous" href="/ru/works/fontain/_payload.json?7c03756c-4a14-4059-8520-dbeda97fd6fe">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/B2-BoNt7.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/Duf8DH4f.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DyzpkNUw.js">
 <link rel="modulepreload" as="script" crossorigin href="/_nuxt/Cdr9tgl2.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BuUuObdV.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/B9UaOuIL.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/qiJCzz6Q.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CML1ducb.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/DWGUGepl.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/Dc4tC4NM.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/gvo-xKbc.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BCWOPFq-.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DowJIJMp.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DUq0i4RN.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/By9VNvmj.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/-rKweCFV.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/D04FmQNC.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/B6pJlALM.js">
 <link rel="icon" type="image/x-icon" href="favicon.ico">
-<script type="module" src="/_nuxt/DeJUvkL0.js" crossorigin></script>
-<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body  class="light"><div id="__nuxt"><!--[--><main><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/ru/works/fontain/_payload.json?acb65884-3508-409b-a5c9-e9b6b61c325b">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/ru/works/fontain",1736133761318]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"acb65884-3508-409b-a5c9-e9b6b61c325b",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
+<script type="module" src="/_nuxt/B2-BoNt7.js" crossorigin></script>
+<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body  class="light"><div id="__nuxt"><!--[--><main><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/ru/works/fontain/_payload.json?7c03756c-4a14-4059-8520-dbeda97fd6fe">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/ru/works/fontain",1736133899445]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"7c03756c-4a14-4059-8520-dbeda97fd6fe",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
 <script src="https://player.vimeo.com/api/player.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/4.1.4/imagesloaded.pkgd.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.4/TweenMax.min.js"></script></body></html>
