--- a/about/index.html
+++ b/about/index.html
@@ -7,21 +7,21 @@
 <style>.imgabout{margin:auto;width:100%}p{line-height:1}</style>
 <link rel="stylesheet" href="/_nuxt/Topbar.CkE6sM6w.css">
 <link rel="stylesheet" href="/_nuxt/interval.D2cs51dV.css">
-<link rel="preload" as="fetch" crossorigin="anonymous" href="/about/_payload.json?7c03756c-4a14-4059-8520-dbeda97fd6fe">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/B2-BoNt7.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/Gyf06sm0.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DyzpkNUw.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/WVBAIvCk.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DowJIJMp.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DUq0i4RN.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/i67v9_Ug.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/-rKweCFV.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/D04FmQNC.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/B6pJlALM.js">
+<link rel="preload" as="fetch" crossorigin="anonymous" href="/about/_payload.json?60b0b407-408d-4828-82d9-1c290d6f7eae">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DHFA5uiQ.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/ChfnrIE_.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CMB4V5mF.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/Dk5rpGqn.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/Vs0CkTkF.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/NyoLbfDD.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/C77-g54V.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/pH_9CS5d.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/SfJV8u_H.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/CxpTgPjW.js">
 <link rel="icon" type="image/x-icon" href="favicon.ico">
-<script type="module" src="/_nuxt/B2-BoNt7.js" crossorigin></script>
-<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body  class="light"><div id="__nuxt"><!--[--><main><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/about/_payload.json?7c03756c-4a14-4059-8520-dbeda97fd6fe">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/about",1736133899440]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"7c03756c-4a14-4059-8520-dbeda97fd6fe",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
+<script type="module" src="/_nuxt/DHFA5uiQ.js" crossorigin></script>
+<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body  class="light"><div id="__nuxt"><!--[--><main><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/about/_payload.json?60b0b407-408d-4828-82d9-1c290d6f7eae">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/about",1736134093114]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"60b0b407-408d-4828-82d9-1c290d6f7eae",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
 <script src="https://player.vimeo.com/api/player.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/4.1.4/imagesloaded.pkgd.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.4/TweenMax.min.js"></script></body></html>
